<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_c"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:background="@drawable/piano_key_shape_white"
                    android:gravity="bottom|center"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/btn_d"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:layout_marginStart="-1dp"
                    android:layout_toEndOf="@id/btn_c"
                    android:gravity="bottom|center"
                    android:background="@drawable/piano_key_shape_white"
                    android:text="@string/d" />

                <Button
                    android:id="@+id/btn_e"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:layout_toEndOf="@id/btn_d"
                    android:layout_marginStart="-1dp"
                    android:gravity="bottom|center"
                    android:background="@drawable/piano_key_shape_white"
                    android:text="@string/e" />

                <Button
                    android:id="@+id/btn_f"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:layout_toEndOf="@id/btn_e"
                    android:layout_marginStart="-1dp"
                    android:gravity="bottom|center"
                    android:background="@drawable/piano_key_shape_white"
                    android:text="@string/f" />

                <Button
                    android:id="@+id/btn_g"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:layout_toEndOf="@id/btn_f"
                    android:layout_marginStart="-1dp"
                    android:gravity="bottom|center"
                    android:background="@drawable/piano_key_shape_white"
                    android:text="@string/g" />

                <Button
                    android:id="@+id/btn_a"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:layout_toEndOf="@id/btn_g"
                    android:layout_marginStart="-1dp"
                    android:gravity="bottom|center"
                    android:background="@drawable/piano_key_shape_white"
                    android:text="@string/a" />

                <Button
                    android:id="@+id/btn_b"
                    android:layout_width="72dp"
                    android:layout_height="300dp"
                    android:layout_toEndOf="@id/btn_a"
                    android:layout_marginStart="-1dp"
                    android:gravity="bottom|center"
                    android:background="@drawable/piano_key_shape_white"
                    android:text="@string/b" />

                <Button
                    android:id="@+id/btn_db"
                    android:layout_width="60dp"
                    android:layout_height="120dp"
                    android:background="@drawable/piano_key_shape_black"
                    android:layout_toEndOf="@id/btn_c"
                    android:textAllCaps="false"
                    android:layout_marginStart="-36dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/db" />

                <Button
                    android:id="@+id/btn_eb"
                    android:layout_width="60dp"
                    android:layout_height="120dp"
                    android:background="@drawable/piano_key_shape_black"
                    android:layout_toEndOf="@id/btn_d"
                    android:textAllCaps="false"
                    android:layout_marginStart="-36dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/eb" />

                <Button
                    android:id="@+id/btn_gb"
                    android:layout_width="60dp"
                    android:layout_height="120dp"
                    android:background="@drawable/piano_key_shape_black"
                    android:layout_toEndOf="@id/btn_f"
                    android:textAllCaps="false"
                    android:layout_marginStart="-36dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/gb" />

                <Button
                    android:id="@+id/btn_ab"
                    android:layout_width="60dp"
                    android:layout_height="120dp"
                    android:background="@drawable/piano_key_shape_black"
                    android:layout_toEndOf="@id/btn_g"
                    android:textAllCaps="false"
                    android:layout_marginStart="-36dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/ab" />

                <Button
                    android:id="@+id/btn_bb"
                    android:layout_width="60dp"
                    android:layout_height="120dp"
                    android:background="@drawable/piano_key_shape_black"
                    android:layout_toEndOf="@id/btn_a"
                    android:textAllCaps="false"
                    android:layout_marginStart="-36dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/bb" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_num_notes_label" />

                <EditText
                    android:id="@+id/settingNumNotes"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="1" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:contentDescription="@string/btn_label_play"
                    android:background="@drawable/play_btn_selector"
                    android:src="@drawable/ic_play_arrow_white_48dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">

                    <TextView
                        android:id="@+id/questionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/progressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/resultText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>